API: remove the block and gas info from the TransactionType
These information will be provided by the /transaction-receipt endpoint
